refactor: 세무 기능 제거
